[package]
name = "clock"
version = "0.2.0"
authors = ["Denis <denis@pinax.network>", "Etienne <etienne@pinax.network>"]
description = "Block ID, number & timestamp"
license = "MIT"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-entity-change = "1.3"
